changes for Order Module

--- a/src/assets/static/terms.html
+++ b/src/assets/static/terms.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>ReddyIce Terms and Conditions</title>
+  <title>Terms and Conditions</title>
   <STYLE TYPE="text/css">
     
       @page { size: 8.5in 11in; margin-left: 1in; margin-right: 1in; margin-top: 1in; margin-bottom: 0.5in }
@@ -36,7 +36,7 @@
     UPDATED TERMS AND CONDITIONS ON RIC’S WEBSITE AT LEAST THIRTY (30)
     DAYS IN ADVANCE OF THE EFFECTIVE DATE OF ANY CHANGES.  SUBSCRIBER
     SHOULD REGULARLY REVIEW INFORMATION POSTED ONLINE AT
-    <B>HTTP://MYICEBOX.REDDYICE.COM</B> TO OBTAIN TIMELY NOTICE OF SUCH
+    <B>CRM</B> TO OBTAIN TIMELY NOTICE OF SUCH
     CHANGES. ALL DEFINITIONS ARE SET FORTH IN SECTION 13 HEREIN.</P>
     <P STYLE="margin-bottom: 0in; line-height: 100%"><BR>
     </P>
